[package]
name = "bpf-program-template"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
solana-program = "=1.9.4"
thiserror = "1.0.24"
spl-token = {version = "3.2.0", features = ["no-entrypoint"]}
arrayref = "0.3.6"
solana-frozen-abi = "1.9.4"
zeroize = "1.4.3"

[features]
test-bpf = []

[lib]
crate-type = ["cdylib", "lib"]
